# rk_mpp

./: .gitignore  CMakeLists.txt  decoder  decoder.cpp  指令&日志.txt
src/: decoder_demo.cpp  encoder_demo.cpp  test.cpp
src/ffmpeg/: ffmpeg_getframe.cpp  ffmpeg_getframe.h
src/mpp/: mpp_decoder.cpp  mpp_decoder.h  mpp_encoder.cpp  mpp_encoder.h
src/queue/: queue.h
